[gd_scene load_steps=2 format=3 uid="uid://c76fu0u8dm60x"]

[ext_resource type="Script" uid="uid://b8hr80tkntp84" path="res://scripts/ui/login_view.gd" id="1_g47pj"]

[node name="LoginView" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g47pj")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(150, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -34.0
offset_top = -50.5
offset_right = 34.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="UsernameField" type="LineEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Username"
alignment = 1

[node name="PasswordField" type="LineEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Password"
alignment = 1
secret = true

[node name="SubmitButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Login"
